--- a/Hangman/Keep trying/task.html
+++ b/Hangman/Keep trying/task.html
@@ -1,4 +1,4 @@
-<html><body><h5 id="description">Description</h5>
+<h5 id="description">Description</h5>
 <p>Let's make the game iterative. In this stage, we'll adjust our game to resemble the classic version of Hangman. Players should now guess the letters in a word instead of inputting an entire word. If an attempt is successful, uncover the letter. We also need to add the lose condition — players have eight attempts to guess all letters that appear in the word. When players run out of attempts, the game ends.</p>
 <p>Don't forget to get rid of the hints: replace all the letters in a word with hyphens at the beginning. Players input one lowercase letter at a time, so there is no need to worry about that.</p>
 <p>Later on, we will also determine the win conditions, but in this stage, let's just see how well our player guesses the word on each attempt.</p>
@@ -77,4 +77,4 @@ Input a letter: &gt; a  # 1 attempt
 java
 Input a letter: &gt; j  # 0 attempts
 
-Thanks for playing!</code></pre></body></html>
+Thanks for playing!</code></pre>
