--- a/Hangman/Let’s play a game/task.html
+++ b/Hangman/Let’s play a game/task.html
@@ -1,4 +1,4 @@
-<html><body><h5 id="description">Description</h5>
+<h5 id="description">Description</h5>
 <p>In this stage, we will add some simple gameplay. There will be two possible outcomes. Let's first print a welcoming message and then ask players to guess the word we have set for the game. If they guess the word, the game reports a win; otherwise, it will "hang" the player.</p>
 <h5 id="objectives">Objectives</h5>
 <ul>
@@ -16,4 +16,4 @@ You survived!</code></pre>
 <p><strong>Example 2</strong>:</p>
 <pre><code class="language-no-highlight">H A N G M A N
 Guess the word: &gt; java
-You lost!</code></pre></body></html>
+You lost!</code></pre>
