--- a/Hangman/Menu, please/task.html
+++ b/Hangman/Menu, please/task.html
@@ -1,4 +1,4 @@
-<html><body><h5 id="description">Description</h5>
+<h5 id="description">Description</h5>
 <p>In this stage, let's add a little more flavor to the game by constructing a menu to restart the program after the current session ends.</p>
 <h5 id="objectives">Objectives</h5>
 <ul>
@@ -66,4 +66,4 @@ You survived!
 Type "play" to play the game, "results" to show the scoreboard, and "exit" to quit: &gt; results
 You won: 1 times.
 You lost: 0 times.
-Type "play" to play the game, "results" to show the scoreboard, and "exit" to quit: &gt; exit</code></pre></body></html>
+Type "play" to play the game, "results" to show the scoreboard, and "exit" to quit: &gt; exit</code></pre>
