--- a/Topics/Random module/Theory/task.html
+++ b/Topics/Random module/Theory/task.html
@@ -1,5 +1,5 @@
 <h2>Random module</h2>
-<html><body><p>Sometimes it happens that we lack data and need to make up a bunch of new examples rather quickly. Of course, you can spend some time writing those examples yourself, but it's not so efficient, right? It would make more sense to shift the responsibility to your computer, namely, the Python's built-in module <strong>random</strong>. In this module, a random search is used to generate elements and is performed using an algorithm whose starting point is a <strong>seed</strong>. The seed allows us to save the current state, making it easy to reproduce the same numbers on several code executions. Therefore, the results given aren't random at all and, technically, this module should have been called <strong>pseudo-random</strong>. Nevertheless, it may be useful for a large number of applications, such as modeling and simulation.</p>
+<p>Sometimes it happens that we lack data and need to make up a bunch of new examples rather quickly. Of course, you can spend some time writing those examples yourself, but it's not so efficient, right? It would make more sense to shift the responsibility to your computer, namely, the Python's built-in module <strong>random</strong>. In this module, a random search is used to generate elements and is performed using an algorithm whose starting point is a <strong>seed</strong>. The seed allows us to save the current state, making it easy to reproduce the same numbers on several code executions. Therefore, the results given aren't random at all and, technically, this module should have been called <strong>pseudo-random</strong>. Nevertheless, it may be useful for a large number of applications, such as modeling and simulation.</p>
 <h5 id="random-method-first-steps" style="text-align: center;">Random method: first steps</h5>
 <p>First of all, we need to import the module:</p>
 <pre><code class="language-python">import random</code></pre>
@@ -16,7 +16,7 @@ print(random.random())  # 0.956177930864557</code></pre>
 </ul>
 <pre><code class="language-python">print(random.uniform(3, 100))  # 35.94079523197162</code></pre>
 <ul>
-<li><strong><code class="language-python">random.randint(a, b)</code> – </strong>returns a pseudo-random integer number in the range between a and b. Note the the last element of the range is included too (in contrast to <code class="language-python">range()</code>)!</li>
+<li><strong><code class="language-python">random.randint(a, b)</code> – </strong>returns a pseudo-random integer number in the range between a and b. Note that the last element of the range is included too (in contrast to <code class="language-python">range()</code>)!</li>
 </ul>
 <pre><code class="language-python">print(random.randint(35, 53))  # 52
 print(random.randint(7, 9))    # 9</code></pre>
@@ -51,4 +51,4 @@ print(random.shuffle(tiny_list))  # None</code></pre>
 <p>The pseudo-random generators of the <code class="language-python">random</code> module should <em>NOT</em> be used for security purposes. If you are intending to work with passwords, security tokens and other sensitive data, check out the <a href="https://docs.python.org/3/library/secrets.html" rel="noopener noreferrer nofollow" target="_blank">secrets</a> module. It's considered more reliable since it generates secure random numbers.</p>
 <p> </p>
 <h5 id="summary">Summary</h5>
-<p>To sum up, in this topic, we've looked closely at <code class="language-python">random</code> module from a Python standard library and its basic functionality. Now you can use it in your projects yourself!</p></body></html>
+<p>To sum up, in this topic, we've looked closely at <code class="language-python">random</code> module from a Python standard library and its basic functionality. Now you can use it in your projects yourself!</p>
